--- a/Templates/leavemodule/application.html
+++ b/Templates/leavemodule/application.html
@@ -87,7 +87,7 @@
                       {% if cl is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p>
-                          <input name="leaves" type="radio" id="test1" />
+                          <input name="leaves" type="radio" id="test1" value="1"/>
                           <label for="test1">Casual Leave</label>
                         </p>
                       </div>
@@ -95,7 +95,7 @@
                       {% if rh is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p >
-                          <input name="leaves" type="radio" id="test2" />
+                          <input name="leaves" type="radio" id="test2" value="2"/>
                           <label for="test2">Restricted Leave</label>
                         </p>
                       </div>
@@ -103,8 +103,8 @@
                       {% if spc is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p>
-                          <input name="leaves" type="radio" id="test3"  />
-                          <label for="test3">Special Leave</label>
+                          <input name="leaves" type="radio" id="test3" value="3"/>
+                          <label for="test3">Special Casual Leave</label>
                         </p>
                       </div>
                       {% endif %}
@@ -114,7 +114,7 @@
                       {% if el is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p >
-                          <input name="leaves" type="radio" id="test4"  />
+                          <input name="leaves" type="radio" id="test4" value="4"  />
                           <label for="test4">Earned Leave</label>
                         </p>
                       </div>
@@ -122,7 +122,7 @@
                       {% if col is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p >
-                          <input name="leaves" type="radio" id="test5" />
+                          <input name="leaves" type="radio" id="test5" value="5"/>
                           <label for="test5">Commuted Leaeve</label>
                         </p>
                       </div>
@@ -130,7 +130,7 @@
                       {% if vl is not 0 %}
                       <div class="col s2" id="r1" style="display:block">
                         <p>
-                          <input name="leaves" type="radio" id="test6"/>
+                          <input name="leaves" type="radio" id="test6" value="6"/>
                           <label for="test6">Vacation Leave</label>
                         </p>
                       </div>
