--- a/Templates/leavemodule/index.html
+++ b/Templates/leavemodule/index.html
@@ -101,7 +101,7 @@
                 </div>
               </a>
 
-              <a href="/leave_module/response">
+                <a href="/leave_module/response">
                 <div style="padding: 30px;" class="grey lighten-3 col s2 offset-s1 waves-effect">
                   <center><img src="{% static 'leavemodule/img/status.png'%}" class="responsive-img" /><br>
                   <span class="indigo-text text-lighten-1"><h5>Response</h5></span></center>
@@ -109,7 +109,7 @@
               </a>
 
               <a href="/leave_module/inbox" >
-                <div style="padding: 30px; display: none;" class="grey lighten-3 col s2 offset-s1 waves-effect">
+                <div style="padding: 30px;" class="grey lighten-3 col s2 offset-s1 waves-effect">
                   <center><img src="{% static 'leavemodule/img/inbox.png'%}" class="responsive-img" /><br>
                   <span class="indigo-text text-lighten-1"><h5>Inbox</h5></span></center>
                 </div>
