--- a/Templates/basic/index.html
+++ b/Templates/basic/index.html
@@ -146,6 +146,11 @@
     $('.modal').modal();
   });
   </script>
+  {%if error %}
+  <script type="text/javascript">
+  alert("{{error}}");
+  </script>
+  {% endif %}
 
   </body>
 </html>
