--- a/Templates/basic/index.html
+++ b/Templates/basic/index.html
@@ -130,7 +130,7 @@
 
           <div id="large-header" class="large-header">
               <canvas id="demo-canvas"></canvas>
-              <h1 class="main-title" style="font-family:Titillium Web">IIITDM JABALPUR</br>ERP</h1>
+              <h1 class="main-title" style="font-family:Titillium Web">IIITDMJ</br>ERP</h1>
           </div>
 
 
